# FroggerOpenGL

./: .gitignore  CMakeLists.txt  LICENSE  lightDemo.cpp  main.cpp
FroggerObjects/: FroggerGameManager.cpp  FroggerGameManager.h  MovementEngine.cpp  MovementEngine.h  ObjectCollider.cpp  ObjectCollider.h
FroggerObjects/Cameras/: FpsPerspCamera.cpp  FpsPerspCamera.h  TopOrthoCamera.cpp  TopOrthoCamera.h  TopPerspCamera.cpp  TopPerspCamera.h
FroggerObjects/ComplexObjects/: BelowRiver.cpp  BelowRiver.h  Bus.cpp  Bus.h  Car.cpp  Car.h  Frog.cpp  Frog.h  Particle.cpp  Particle.h  River.cpp  River.h  Riverside.cpp  Riverside.h  Road.cpp  Road.h  Roadside.cpp  Roadside.h  Timberlog.cpp  Timberlog.h  Tree.cpp  Tree.h  Turtle.cpp  Turtle.h
FroggerObjects/Lights/: Daylight.cpp  Daylight.h  Nightlight.cpp  Nightlight.h  Spotlight.cpp  Spotlight.h
FroggerObjects/SimpleObjects/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Rectangle.cpp  Rectangle.h  Sphere.cpp  Sphere.h  Torus.cpp  Torus.h
FroggerObjects/Utilities/: HitableObject.cpp  HitableObject.h  ObjectFactory.cpp  ObjectFactory.h  ResetableObject.cpp  ResetableObject.h
GraphicLib/: Engine.cpp  Engine.h  Entity.cpp  Entity.h  FlareManager.cpp  FlareManager.h  GameManager.cpp  GameManager.h  TGA.cpp  TGA.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  asphalt.tga  frog.tga  glbmp.cpp  glbmp.h
GraphicLib/AVTLib/: AVTMatrixModule.cpp  AVTMatrixModule.h  VertexAttrDef.h  basic_geometry.cpp  basic_geometry.h  cube.h  rectangle.h  rectanglexy.h  vsShaderLib.cpp  vsShaderLib.h
GraphicLib/CameraObjects/: Camera.cpp  Camera.h  OrthogonalCamera.cpp  OrthogonalCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
GraphicLib/GameObjects/: Billboard.cpp  Billboard.h  ComposedObject.cpp  ComposedObject.h  DynamicObject.cpp  DynamicObject.h  Flare.cpp  Flare.h  GameObject.cpp  GameObject.h  SimpleObject.cpp  SimpleObject.h  StaticObject.cpp  StaticObject.h
GraphicLib/LightObjects/: LightSource.cpp  LightSource.h
resources/: grass.tga  head.tga  water.tga  wood.tga
shaders/: pointlight.frag  pointlight.vert
